@@ -1,3 +1,6 @@
+07/14/20
+  - Use muti service object to learn data types
+
 07/13/20
   - Fixed when single tag is left over in batch read
 
